# SFMLEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  SFMLEngine.sln
Asteroids/: CMakeLists.txt  Makefile  imgui.ini
Asteroids/headers/: Game.h  LevelScene.h
Asteroids/headers/Components/: AsteroidController.h  AsteroidsCreator.h  ExplosionController.h  PlayerController.h
Asteroids/headers/Prefabs/: Asteroid.h  Bullet.h
Asteroids/rsc/Music/: Liscences.txt
Asteroids/rsc/SoundEffects/: License.txt
Asteroids/rsc/settings/: InGameControls.ini  SupportedKeys.ini
Asteroids/src/: Game.cpp  LevelScene.cpp  main.cpp
Asteroids/src/Components/: AsteroidController.cpp  AsteroidsCreator.cpp  BulletController.cpp  ExplosionController.cpp  PlayerController.cpp
Asteroids/src/Prefabs/: Asteroid.cpp  Bullet.cpp  Explosion.cpp  SpaceShip.cpp
Astroids/: CMakeLists.txt  Makefile  outputlog.txt
Astroids/headers/Components/: AstroidController.h  AstroidsCreator.h  BulletController.h  PlayerController.h
Astroids/headers/Prefabs/: Astroid.h  Bullet.h  Explosion.h  SpaceShip.h
Astroids/rsc/Music/: Liscences.txt
Astroids/rsc/SoundEffects/: License.txt
Astroids/rsc/settings/: InGameControls.ini  SupportedKeys.ini
Astroids/src/: Game.cpp  LevelScene.cpp  main.cpp
Astroids/src/Components/: AstroidController.cpp  AstroidsCreator.cpp  BulletController.cpp  ExplosionController.cpp  PlayerController.cpp
Astroids/src/Prefabs/: Astroid.cpp  Bullet.cpp  Explosion.cpp  SpaceShip.cpp
MazeGenerator/: CMakeLists.txt  Makefile  imgui.ini
MazeGenerator/headers/: LevelScene.h  MazeCell.h  MazeCellShape.h  MazeController.h  MazeGenerator.h
MazeGenerator/src/: LevelScene.cpp  MazeCell.cpp  MazeCellShape.cpp  MazeController.cpp  MazeGenerator.cpp  main.cpp
SFMLEngine/: CMakeLists.txt  Makefile  SFMLEngine  SFMLEngine.vcxproj  SFMLEngine.vcxproj.filters  Sandbox.h  file2.txt  imgui.ini
SFMLEngine/headers/: Animation.h  Component.h  ECSPCH.h  Engine.h  Entity.h  EntityManager.h  FPSCounter.h  Keyboard.h  LifeCycleManager.h  Mouse.h  PCH.h  ParticleFountain.h  ParticleSystem.h  PhysicsListener.h  ResourceLoader.h  ResourceManager.h  Scene.h  State.h  Tilemap.h  Transform.h  UFParticleSystem.h  Vec2.h
SFMLEngine/headers/Components/: Animation.h  Animator.h  BoxCollider.h  CircleCollider.h  Component.h  Controller.h  Highlightable.h  RigidBody2D.h  SpriteRenderer.h  Transform.h
SFMLEngine/headers/Components/UI/: Selected.h  TextEnterHandler.h
SFMLEngine/headers/ECS/: Componant.h  ECS.h  Entity.h  EntityManager.h  Transform.h
SFMLEngine/headers/Gui/: GUI.h  GUIElement.h
SFMLEngine/headers/UI/: Button.h  Canvas.h  Textbox.h  UIElement.h
SFMLEngine/src/: Animation.cpp  Engine.cpp  Entity.cpp  EntityManager.cpp  FPSCounter.cpp  Keyboard.cpp  LifeCycleManager.cpp  Mouse.cpp  ParticleFountain.cpp  ParticleSystem.cpp  PhysicsListener.cpp  ResourceManager.cpp  Scene.cpp  Tilemap.cpp  Transform.cpp  UFParticleSystem.cpp  main.cpp
SFMLEngine/src/Components/: Animation.cpp  Animator.cpp  BoxCollider.cpp  CircleCollider.cpp  Controller.cpp  Highlightable.cpp  RigidBody2D.cpp  SpriteRenderer.cpp  Transform.cpp
SFMLEngine/src/Components/UI/: Selected.cpp  TextEnterHandler.cpp
SFMLEngine/src/ECS/: EntityManager.cpp  Transform.cpp
SFMLEngine/src/UI/: Button.cpp  Canvas.cpp  Textbox.cpp
SFMLEngine/src/imgui/: imgui-SFML.cpp  imgui_demo.cpp  imgui_widgets.cpp
SampleGame/: Makefile  SampleGame.vcxproj  SampleGame.vcxproj.filters  imgui.ini
SampleGame/headers/: Game.h  GameScene.h
SampleGame/headers/Components/: PlayerController.h
SampleGame/headers/Prefabs/: Board.h  Piece.h
SampleGame/rsc/shaders/: FragmentShader.glsl  VertexShader.glsl
SampleGame/src/: Game.cpp  GameScene.cpp  SampleGame.cpp
SampleGame/src/Components/: PlayerController.cpp
SampleGame/src/Prefabs/: Board.cpp  Piece.cpp
Sandbox/: CMakeLists.txt  Makefile  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  main.cpp
Sandbox/TestGame/headers/: Game.h  MainMenu.h
Sandbox/TestGame/src/: Game.cpp  MainMenu.cpp
Sandbox/headers/: CustomGame.h  CustomScene.h
Sandbox/src/: CustomGame.cpp  CustomScene.cpp  main.cpp
cmake/: CPM.cmake
